fi(styles): fixing home page spacings

--- a/apps/host/src/styles/pages/_home.scss
+++ b/apps/host/src/styles/pages/_home.scss
@@ -23,7 +23,7 @@
 
   @include media-short-vertical {
     min-height: auto;
-    padding-top: 2rem;
+    padding-top: 1rem;
     padding-bottom: 2rem;
   }
 
@@ -129,6 +129,12 @@
 
     @include media-short-vertical {
       margin-bottom: 2rem;
+    }
+
+    br {
+      @include media-md {
+        display: none;
+      }
     }
   }
 
